--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <li class="footer-li">
                             <a class="footer-link" href="#main-header">
                                 <i class="fa-solid fa-utensils footer-icon"></i>
-                                Proposer un restaurant                          
+                                Proposer un restaurant
                             </a>
                         </li>    
                         <li class="footer-li">
@@ -121,6 +121,7 @@
                         </li>
                         <li class="footer-li">
                             <a class="footer-link" href="#main-header">
+                                <i class="fa-solid fa-handshake-angle footer-icon"></i>
                                 Mentions légales
                             </a>
                         </li>
